Make scrapper checks for links updates